--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,8 +1,14 @@
-- name: "Contact"
-  link: "contact"
+# - name: "Contact"
+#   link: "contact"
 
-- name: "Resume"
-  link: "resume.pdf"
+- name: "Publications"
+  link: "publications"
+
+- name: "Teaching"
+  link: "teaching"
+
+- name: "Projects"
+  link: "projects"
 
 - name: "About"
   link: "/researcher/"
