--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: GIOVANNI MAFFEI Ph.D.
 url: "https://giovannimaffei.github.io"
-baseurl: "/researcher"
+baseurl: "/personal_test/"
 
 markdown: kramdown
 
